# backend

./: .gitignore  Main.hs  README.md  cabal.config  tidbit-nlp.cabal
Intelligencer/: Intelligencer.hs  RankReduce.hs  SectionTree.hs
intelligencer/: SectionTree.hs  SectionTreeGen.hs
