name:                tidbit-backend
version:             0.1.0.0
synopsis:            Intelligent backend that parses text into a minified article
-- description:         
homepage:            https://github.com/tidbit-tech/nlp
license:             MIT
license-file:        LICENSE
author:              Alastair Paragas
maintainer:          alastairparagas@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable tidbit-nlp
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, 
                        tagsoup == 0.14.*, 
                        fgl == 5.5.*, 
                        chatter == 0.9.*, 
                        glider-nlp == 0.4.*, 
                        pandoc == 1.19.* 
                        
                        
  -- hs-source-dirs:      
  default-language:    Haskell2010
